# Libero

./: README.md  i
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/main/lib/main/: main
install/main/share/main/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/message_info/include/message_info/msg/: real_commands.hpp  robot_command.h  robot_command.hpp  robot_commands.hpp  rosidl_typesupport_introspection_c__visibility_control.h  slave.h
install/message_info/include/message_info/msg/detail/: real_commands__rosidl_typesupport_fastrtps_c.h  real_commands__rosidl_typesupport_fastrtps_cpp.hpp  real_commands__struct.h  real_commands__traits.hpp  real_commands__type_support.cpp  robot_command__builder.hpp  robot_command__rosidl_typesupport_fastrtps_c.h  robot_command__struct.h  robot_commands__functions.c  robot_commands__rosidl_typesupport_fastrtps_c.h  robot_commands__rosidl_typesupport_fastrtps_cpp.hpp  robot_commands__rosidl_typesupport_introspection_cpp.hpp  robot_commands__struct.h  robot_commands__struct.hpp  robot_commands__type_support.cpp  robot_commands__type_support.h  slave__builder.hpp  slave__functions.c  slave__struct.h  slave__struct.hpp  slave__type_support.c  slave__type_support.cpp
install/message_info/share/ament_index/resource_index/package_run_dependencies/: message_info
install/message_info/share/ament_index/resource_index/parent_prefix_path/: message_info
install/message_info/share/message_info/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/message_info/share/message_info/cmake/: message_info__rosidl_generator_cExport-noconfig.cmake  message_info__rosidl_typesupport_cExport.cmake  message_info__rosidl_typesupport_introspection_cExport.cmake  message_info__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/message_info/share/message_info/msg/: RealCommands.msg  Slave.msg
log/: latest_build
src/main/: package.xml  setup.cfg  setup.py
src/main/python_programs/: main.py  move.py
src/main/python_programs/camera/: blob_track.py
src/main/python_programs/switch/: limit_switch.py
src/message_info/: CMakeLists.txt  package.xml
src/message_info/msg/: RobotCommand.msg
